--- a/home.html
+++ b/home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My First GitHub Page</title>
+    <title>hom3</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <p>My first webpage on GitHub Pages</p>
+    <h1>heloooooooo</h1>
+    <p>WORKING ON IT !</p>
 </body>
 </html>
