--- a/home.html
+++ b/home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>hom3</title>
+    <title>hello</title>
 </head>
 <body>
-    <h1>heloooooooo</h1>
-    <p>WORKING ON IT !</p>
+    <h1>actually working</h1>
+    <p>comming soon :)</p>
 </body>
 </html>
