--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>hello</title>
-</head>
-<body>
-    
-    <p>comming soon :)</p>
+<body style="background-color:black;">
+
+<h1>working on it :)</h1>
+
+
 </body>
 </html>
