--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html>
 <body style="background-color:black;">
 
-<h1>working on it :)</h1>
+<h1 style="color: blue;">working on it :)</h1>
 
 
 </body>
