--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <head>
+        <style>
+            h1 {
+                font-size: 18px;
+                text-align: center;
+            }
+        </style>
+    </head>
 <body style="background-color:black;">
 
 <h1 style="color: blue;">working on it :)</h1>
