--- a/blog.html
+++ b/blog.html
@@ -3,14 +3,21 @@
   <head>
         <style>
             h1 {
-                font-size: 18px;
-                text-align: center;
+                font-size: 40px;
+                text-align: left;
+                font-family: "Courier New", monospace;
+            }
+          h2 {
+                font-size: 20px;
+                text-align: left;
+                font-family: "Courier New", monospace;
+                height: 100px;
             }
         </style>
     </head>
 <body style="background-color:black;">
-
-<h1 style="color: blue;">working on it :)</h1>
+<h1 style="color: blue;">BLOG</h1>
+<h2 style="color: blue;">working on it :)</h2>
 
 
 </body>
