--- a/blog.html
+++ b/blog.html
@@ -12,12 +12,13 @@
                 text-align: left;
                 font-family: "Courier New", monospace;
                 height: 100px;
+                left: 50px;
             }
         </style>
     </head>
 <body style="background-color:black;">
 <h1 style="color: blue;">BLOG</h1>
-<h2 style="color: blue;">working on it :)</h2>
+<h2 style="color: blue;"> * Working on it :)</h2>
 
 
 </body>
